5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4358/executions/1577_1330.log
== SUBMITION (2019-03-30 19:24:14) 
-- CODE:
print(250/6)

-- EXECUTION TIME:
0.159091
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.666666666666664
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 19:26:04) 
-- CODE:
print(round(250/6))

-- EXECUTION TIME:
0.275902
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
42
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 19:26:08) 
-- CODE:
print(round(250/6))

-- EXECUTION TIME:
0.177995
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
42
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:12:39) 
-- CODE:
valorunitario=float(input(250/6))
print(round(valorunitario,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    valorunitario=float(input(250/6))
ValueError: could not convert string to float: 'xxx'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 18:12:45) 
-- CODE:
valorunitario=float(input(250/6))
print(round(valorunitario,2))

-- EXECUTION TIME:
0.148445
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1577/1330/main.py", line 1, in <module>
    valorunitario=float(input(250/6))
ValueError: could not convert string to float: 'xxx'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 18:13:06) 
-- CODE:
valorunitario=float(input(250/6))
print(round(valorunitario, 2))

-- EXECUTION TIME:
0.203017
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1577/1330/main.py", line 1, in <module>
    valorunitario=float(input(250/6))
ValueError: could not convert string to float: 'xxx'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:13:08) 
-- CODE:
valorunitario=float(input(250/6))
print(round(valorunitario, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    valorunitario=float(input(250/6))
ValueError: could not convert string to float: 'xxx'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 18:14:11) 
-- CODE:
valortotal=250
valorunitario=float(input(250/6))
print(round(valorunitario, 2))

-- EXECUTION TIME:
0.165529
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1577/1330/main.py", line 2, in <module>
    valorunitario=float(input(250/6))
ValueError: could not convert string to float: 'xxx'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:14:13) 
-- CODE:
valortotal=250
valorunitario=float(input(250/6))
print(round(valorunitario, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valorunitario=float(input(250/6))
ValueError: could not convert string to float: 'xxx'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:17:05) 
-- CODE:
contatotal=250
valorunitario=float(input( "contatotal"/6)
print(round(valorunitario))
-- ERROR:
File "XXXX", line 3
    print(round(valorunitario))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 20:33:06) 
-- CODE:
conta=250
valor=float(input(conta/6))
print(round(valor,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor=float(input(conta/6))
ValueError: could not convert string to float: 'xxx'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 20:33:49) 
-- CODE:
conta=250
valor=float(input(conta/6))
print(round(valor, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor=float(input(conta/6))
ValueError: could not convert string to float: 'xxx'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-05 20:33:53) 
-- CODE:
conta=250
valor=float(input(conta/6))
print(round(valor, 2))
-- EXECUTION TIME:
0.143062
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1577/1330/main.py", line 2, in <module>
    valor=float(input(conta/6))
ValueError: could not convert string to float: 'xxx'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-05 20:38:30) 
-- CODE:
conta=250
valor=float(input(conta/6))
print(round(valor,2))
-- EXECUTION TIME:
0.15707
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1577/1330/main.py", line 2, in <module>
    valor=float(input(conta/6))
ValueError: could not convert string to float: 'xxx'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 20:38:33) 
-- CODE:
conta=250
valor=float(input(conta/6))
print(round(valor,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor=float(input(conta/6))
ValueError: could not convert string to float: 'xxx'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 20:42:32) 
-- CODE:
valortotal=250
valorunitario=(float(valortotal//6))
print(round(valorunitario,2))

-- OUTPUT:
41.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-05 20:42:40) 
-- CODE:
valortotal=250
valorunitario=(float(valortotal//6))
print(round(valorunitario,2))

-- EXECUTION TIME:
0.178527
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 20:43:38) 
-- CODE:
valortotal=250
valorunitario=(float(valortotal//6))
print(round(valorunitario,2))

-- OUTPUT:
41.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 20:43:52) 
-- CODE:
valortotal=250
valorunitario=(float(valortotal/6))
print(round(valorunitario,2))

-- OUTPUT:
41.67
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-05 20:43:59) 
-- CODE:
valortotal=250
valorunitario=(float(valortotal/6))
print(round(valorunitario,2))

-- EXECUTION TIME:
0.173668
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.67
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
